# research_paper_on_chronic_pain_drivers

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: docker-compose.yml
paper/report/: main.tex  references.bib
src/data/: README.md
src/results/: REVIEW.md
src/results/networks/: 05_mlvar_core_between_edges.csv  05_mlvar_core_contemporaneous_edges.csv  05_mlvar_core_temporal_edges.csv  06_sgimme_summary_path_counts.csv  07_graphicalvar_edge_selection_freq.csv  07_perperson_edge_heterogeneity.csv  extended_core_vs_full_compare.csv  extended_mlvar_contemporaneous_edges.csv  extended_mlvar_temporal_edges.csv  robust_attention_composite_compare.csv  robust_attention_composite_temporal_edges.csv  robust_bootstrap_edges_long.csv  robust_bootstrap_summary.csv  robust_detrended_compare.csv  robust_detrended_temporal_edges.csv  robust_loo_summary.csv  robust_threat_decomposition_edges.csv  robust_threshold70_compare.csv  robust_threshold70_temporal_edges.csv
src/results/tables/: 02_between_person_corr.csv  02_compliance_by_studyday.csv  02_context_activity_summary.csv  02_context_by_location.csv  02_context_by_social.csv  02_education_distribution.csv  02_ema_descriptives.csv  02_person_level_table1.csv  02_studyweek_effects.csv  02_timing_daily_counts.csv  02_timing_summary.csv  02_within_person_corr.csv  03_variance_decomposition.csv  04_gap_runlengths.csv  04_imputation_comparison.csv  04_item_distribution.csv  04_missingness_by_measure.csv  04_stationarity_summary.csv  05_mlvar_residual_diagnostics.csv  08_account_intercorrelations.csv  09_moderation.csv  (+5 more)
(+69 files in other folders)
