[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viane-pain-idiographic-ema"
version = "0.1.0"
description = "Idiographic network analysis of chronic-pain experience-sampling data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Stijn Van Severen", email = "148014764+stvsever@users.noreply.github.com" }
]
keywords = ["chronic pain", "attention to pain", "EMA", "idiographic networks", "graphicalVAR", "mlVAR"]
dependencies = [
  "matplotlib>=3.8",
  "networkx>=3.2",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pyreadstat>=1.2",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "seaborn>=0.13",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[tool.setuptools]
packages = []
